--- a/package.json
+++ b/package.json
@@ -23,11 +23,20 @@
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.1"
   },
+  "devDependencies": {
+    "@commitlint/cli": "^12.1.1",
+    "concurrently": "^6.0.2",
+    "cz-customizable": "^6.3.0",
+    "git-cz": "^4.7.6",
+    "husky": "^6.0.0",
+    "lint-staged": "^10.5.4"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "type-check": "concurrently \"tsc --pretty\""
   },
   "eslintConfig": {
     "extends": [
@@ -47,12 +56,20 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "cz-conventional-changelog": "^3.3.0"
+  "husky": {
+    "hooks": {
+      "pre-push": "npm run type-check",
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "prepare-commit-msg": "exec < /dev/tty && git-cz --hook"
+    }
   },
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
+      "path": "node_modules/cz-customizable"
+    },
+    "cz-customizable": {
+      "config": "changelog.config.js"
     }
   }
 }
