--- a/package.json
+++ b/package.json
@@ -30,14 +30,13 @@
   "husky": {
     "hooks": {
       "pre-push": "npm run type-check",
-      "pre-commit": "lint-staged",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
       "prepare-commit-msg": "exec < /dev/tty && git-cz --hook"
     }
   },
   "config": {
     "commitizen": {
-      "path": "./node_modules/git-cz"
+      "path": "git-cz"
     }
   },
   "dependencies": {
@@ -68,8 +67,7 @@
     "cz-customizable": "^6.2.0",
     "git-cz": "^4.7.6",
     "git-revision-webpack-plugin": "^3.0.6",
-    "husky": "^6.0.0",
-    "lint-staged": "^10.5.4",
+    "husky": "^4.3.8",
     "standard-version": "^9.1.0"
   }
 }
