--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "trello-ferrum",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
