--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "git-cz": "^4.7.6",
     "git-revision-webpack-plugin": "^3.0.6",
     "husky": "^4.3.8",
+    "prettier": "2.3.2",
     "standard-version": "^9.1.0"
   }
 }
