--- a/package.json
+++ b/package.json
@@ -44,8 +44,11 @@
     "@accounts/client": "^0.32.0",
     "@accounts/client-password": "^0.32.0",
     "@accounts/rest-client": "^0.32.0",
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@mui/icons-material": "^5.0.5",
+    "@mui/material": "^5.0.5",
+    "@mui/styles": "^5.0.2",
     "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
